--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,56 @@
-$bgColor:rgb(40, 121, 198);
+@use 'hero';
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
+
+$bgColor:#040714;
+$mainTextColor:silver;
+$secondTextColor:#f9f9f9;
 
 body{
-    background-color: $bgColor;
+    background-color:$bgColor;
+}
+
+@mixin text($fontSize:16px){
+    font-size:$fontSize;
+    line-height:$fontSize+10px;
+    color:$mainTextColor;
+}
+
+@mixin title($fontSize:40px){
+    @include text($fontSize);
+    color:$secondTextColor;
+}
+
+.text--big{
+    @include text(18px);
+}
+
+.text{
+    @include text;
+}
+
+.text--small{
+    @include text(12px);
+}
+
+.link-text{
+    @include text(18px);
+    color: $secondTextColor;
+    text-decoration: underline;
+}
+
+.title--big{
+    @include title(44px);
+}
+
+.title{
+    @include title;
+}
+
+.title--small{
+    @include title(28px);
 }
