falta só o media

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @use 'devices';
 @use 'faq';
 @use 'footer';
+@use 'header';
 
 @font-face {
     font-family: 'Avenir';
@@ -24,6 +25,7 @@
     padding:0;
     box-sizing:border-box;
     font-family: 'Avenir', sans-serif;
+    list-style: none;
 }
 
 body{
@@ -74,16 +76,44 @@ body{
 
 
 .button{
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 60px;
     font-size: 18px;
     color: variaveis.$secondTextColor;
-    background-color: #6421ff;
+    background-color: variaveis.$mainButtonColor;
     text-transform: uppercase;
     border-radius: 4px;
-    margin-top: 2vw;
-    margin-bottom: 8px;
+    text-decoration: none;
+    padding: 8px 14px;
+    letter-spacing: 1px;
+    border: 1px solid variaveis.$mainButtonColor;
+    cursor: pointer;
+
+    &:hover{
+        background-color: #7a42ff;
+    }
+
+    &--secondary{
+        background-color: variaveis.$secondButtonColor;
+        border-color: variaveis.$secondButtonColor;
+
+        &:hover{
+            background-color: #0b72fa;
+        }
+    }
+
+    &--dark{
+        background-color: variaveis.$darkButtonColor;
+        border-color: variaveis.$secondTextColor;
+
+        &:hover{
+            background-color: variaveis.$secondTextColor;
+            color: black;
+        }
+    }
 }
 
 // Adicione isso no final do arquivo, depois de todos os outros estilos
