--- a/src/styles/variaveis.scss
+++ b/src/styles/variaveis.scss
@@ -1,3 +1,6 @@
 $bgColor:#040714;
 $mainTextColor:silver;
 $secondTextColor:#f9f9f9;
+$mainButtonColor:#6421ff;
+$secondButtonColor: #0063e5;
+$darkButtonColor: rgb(0, 0, 0, 0.8)
