--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -6,6 +6,15 @@
     background-image: url(../images/hero_desktop.jpeg);
     text-align: center;
     background-size: cover;
+    
+    @media (max-width: 768px) {
+        background-image: url(../images/hero_celular.jpeg);
+        padding-top: calc(50vw + 25px);
+        background-size: contain;
+        margin-top: -55px;
+        background-repeat: no-repeat; // Adicione esta linha
+        background-position: top center; // Garante posicionamento correto
+    }
 
     .button{
         margin-top: 2vw;
@@ -18,6 +27,10 @@
         &__brand{
             max-width: 320px;
             margin: 0 auto 38px;
+
+            @media (max-width: 768px) {
+                max-width: 180px;
+            }
         }
 
         .title--small{
@@ -35,9 +48,18 @@
         &__combos{
             display: flex;
             justify-content: space-between;
+
+            @media (max-width: 768px) {
+                display: block;
+            }
             
             &__combo{
                 width: calc(50% - 12px);
+
+                @media (max-width: 768px) {
+                    width: 100%;
+                    margin-bottom: 24px;
+                }
 
                 img{
                     max-height: 60px;
